Fixed content overflow handling

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -49,7 +49,6 @@ header {
   padding: 16px;
   padding-top: 12px;
   top: 0;
-  width: 100%;
   height: 120px;
 }
 
@@ -83,11 +82,11 @@ header .balance {
   top: 120px;
   bottom: 45px;
   width: 100%;
-  overflow-y: scroll;
-  padding: 10px 0;
+  overflow-y: auto;
 }
 
-.sidebar {
+.content {
+  margin: 6px 32px;
 }
 
 footer {
